# Ray

./: .gitignore  CMakeLists.txt  README.md  main.cpp
checker/: diff.ipynb  visual.py
includes/: AABB.hpp  Analysis.hpp  Camera.hpp  Image.hpp  ImageFilter.hpp  Intersection.hpp  Light.hpp  Material.hpp  Matrix.hpp  Ray.hpp  Scene.hpp  Shape.hpp  Util.hpp  Vec.hpp
includes/Materials/: Lambertian.hpp  Metal.hpp  Specular.hpp
src/: AABB.cpp  Analysis.cpp  CMakeLists.txt  Camera.cpp  Image.cpp  ImageFilter.cpp  Intersection.cpp  Light.cpp  Material.cpp  Matrix.cpp  Ray.cpp  Scene.cpp  Shape.cpp  Vec.cpp
src/Materials/: CMakeLists.txt  Lambertian.cpp  Metal.cpp  Specular.cpp
